Fixed crazy overflow

--- a/src/App.css
+++ b/src/App.css
@@ -229,15 +229,12 @@ section {
 
 
 .projimg-text {
-  /*position: absolute;*/
   color: black;
-/*  height: 17vh;
-  width: 16vw;*/
-/*  top: 30%;
-  left: 13%;*/
+  transform: translate(-50%);
+  padding: 20px;
+  font-size: 1ch;
   opacity: 0;
   transition: opacity .5s;
-  /* left: 2.5%; */
 
 }
 
